Update dependencies and optimize chunk loading